Make sure the whole laptop is visible

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -50,12 +50,6 @@ body {
     border: 1px solid black;
 }
 
-@media (min-width: 1200px) {
-    .case {
-        max-height: 350px;
-    }
-}
-
 .case .description a {
     color: black;
     text-decoration: underline;
